2003-05-29  Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
      * vtk/vtkGdcmReader[cxx|h] preparation addons for loading volumes.

2003-05-28  Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
      * When compiling with distutils (see setup.py) the C++ compiler is
        called with different flags than the default ones (with automake).
        In order to fix all those warning, I compiled gdcm with the command
           make 'CXXFLAGS=-Wall -Wstrict-prototypes -D__STDC_LIMIT_MACROS'
        and went for warning fixes:
        - src/gdcmHeader.cxx, Test/dcm2acr.cxx, pourFindTaggs.cxx cleaned
          up from unused variables.
        - vtk/vtkGdcmReader.cxx: potential bug fix.
      * src/gdcmHeader.h: Doxygen warning cleanup

2003-05-27  Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
      * gdcmPython/gdcm.i:
        - typemaps correction to take into account the systematic replacement
          of "using namespace std" with std:: prefix e.g. std::list,
          std::string... (cf changes of 2003-05-21).
        - gdcmGlob global variable of type gdcmGlobal (defined in
          src/gdcmUtil.cxx and declared in gdcmPython/gdcm.i) is now
          exported to Python a as cvar.
      * gdcmPython/__init__.py now defines two functions GetPubDictTagNames()
        and GetPubDictTagNamesByCategory() as a replacement for deprecated
        gdcmDictSet.GetPubDictTagNames() and
        gdcmDictSet.GetPubDictTagNamesByCategory() class functions (i.e.
        C++ static methods).
      * gdcmPython/demo/printGroupedPublicDict.py is operational again,
        with the above changes.

2003-05-22  Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
      * setup.py, manifest.in : bug fix under linux

2003-05-22  Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
      * Modification of setup.py to compile vtk part too. Then, we have 2
        wrappers which must work with same distutils. For that, we have a
        generic distutils in distusiltsWrapping.py ; with :